app/assets/styles/blocks/_hero-banner.scss
.HeroBanner {
	position: relative;
	min-height: 70vh;
	display: flex;
	align-items: flex-end;
    margin: 0;

	@media (max-width: 640px) {
		min-height: 60vh;
	}

	img {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		object-fit: cover;
		z-index: 1;
	}

	&:after {
		content: "";
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background: rgba(0,0,0,0.6);
		z-index: 2;
	}

	.row {
		width: 100%;
		padding: 40px 0;
		position: relative;
		z-index: 3;
		color: $white;
        margin-bottom: 4%;

        h1 {
            @include dashedUnderline($light: true);

            @media (max-width: 640px) {
                font-size: 28px;
            }

            span {
                opacity: 1;
                transition: all 0.3s ease-in-out;
                display: inline-block;
                white-space: nowrap;
                font-weight: 600;

                &.fade-out {
                    opacity: 0;
                    transform: translateX(50%);
                }

                &.fade-in {
                    opacity: 0;
                    transform: translateX(-50%);
                }
            }
        }

		a {
			display: block;
			width: max-content;
			margin-top: 20px;
			@extend .btn;
		}
	}
}

